--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -15,7 +15,7 @@ runtime: threadpool job
 	gcc -shared -Wl -Bsymbolic -o libparakeetruntime.so $(OBJS)
 
 tests: runtime threadpool
-	gcc -o job_test $(FLAGS) -lcunit job_test.c $(OBJS)
+	#gcc -o job_test $(FLAGS) -lcunit job_test.c $(OBJS)
 	gcc -fPIC -c vm.c $(FLAGS) -o vm.o
 	gcc -shared -o vm.so vm.o
 	gcc -o vm_test $(FLAGS) -lcunit vm_test.c $(OBJS)
