Work on autotuner.

--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 IFLAGS = -O3 -ffast-math -ftree-vectorize -msse2
-#IFLAGS = -O3 -ffast-math -msse2 -mllvm -vectorize-loops
+CLFLAGS = -O3 -ffast-math -msse2 -mllvm -vectorize-loops
 LFLAGS = -pthread -lm -lprofiler
 FLAGS = $(IFLAGS) $(LFLAGS)
 OBJS = thread_pool.o job.o
@@ -17,8 +17,18 @@ runtime: threadpool job
 	$(CC) -shared -Wl -Bsymbolic -o libparakeetruntime.so $(OBJS)
 
 tests: runtime threadpool
-	$(CC) -fPIC -c vm.c $(FLAGS) -o vm.o
-	$(CC) -shared -o vm.so vm.o mm_opt_parakeet.o
+	$(CC) $(FLAGS) -fPIC -c vm.c -o vm.o
+	clang $(CLFLAGS) -fPIC -c vm_tiled_clang.c -o vm_tiled_clang.o
+	llc -O3 -relocation-model=pic mm_par_unrolled.ll
+	llc -O3 -relocation-model=pic mm_par_tiled.ll
+	llc -O3 -relocation-model=pic mm_par_tiled_unrolled.ll
+	llc -O3 -relocation-model=pic mm_par_reg_tiled.ll
+	as -o mm_par_unrolled.o mm_par_unrolled.s
+	as -o mm_par_tiled.o mm_par_tiled.s
+	as -o mm_par_tiled_unrolled.o mm_par_tiled_unrolled.s
+	as -o mm_par_reg_tiled.o mm_par_reg_tiled.s
+	$(CC) -shared -o vm.so vm.o mm_par_unrolled.o mm_par_tiled.o \
+				mm_par_tiled_unrolled.o mm_par_reg_tiled.o vm_tiled_clang.o
 
 clean:
 	rm -f *_test *.o *.so *.pyc *~
