--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt --use-mirrors"
 # # command to run tests
-script: nosetests
+script: nosetests test/*
