added support for global value references and change c backend to actually use its config at runtime

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install: "pip install -r requirements.txt --use-mirrors"
 
 # # command to run tests
-script: nosetests test/*
+script: nosetests test
 
 branches:
   only:
