--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: python
 python:
   - "2.7"
 
+virtualenv:
+  system_site_packages: true
+
+before_install:
+ - sudo apt-get install -qq python-numpy python-scipy
+
 # command to install dependencies
 install: "pip install -r requirements.txt --use-mirrors"
 
