--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ virtualenv:
   system_site_packages: true
 
 before_install:
- - sudo apt-get install -qq python-dev python-setuptools python-numpy python-scipy  
+ - sudo apt-get install -qq python-dev python-setuptools python-numpy python-scipy python-numpy-dev 
 
 # command to install dependencies
 install: "pip install -r requirements.txt --use-mirrors"
