--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@ language: python
 python:
   - "2.7"
 
-virtualenv:
-  system_site_packages: true
+#virtualenv:
+#  system_site_packages: true
 
-before_install:
- - sudo apt-get install -qq python-dev python-setuptools python-numpy python-scipy python-numpy-dev 
+#before_install:
+#  - sudo apt-get install  build-essential python-dev python-setuptools
+# - sudo apt-get install -qq python-dev python-setuptools python-numpy python-scipy python-numpy-dev 
 
 # command to install dependencies
 install: "pip install -r requirements.txt --use-mirrors"
